--- a/background.html
+++ b/background.html
@@ -245,8 +245,8 @@
                     counter.set("session-number", counter.get("session-number") - 1);
                     counter.update();
                 }
-                Platform.tabs.addEventListener("create", add, true);
-                Platform.tabs.addEventListener("remove", subtract, true);
+                Platform.tabs.on("create", add, true);
+                Platform.tabs.on("remove", subtract, true);
             });
         }, true);
 
@@ -364,9 +364,9 @@
                 }
             }
         };
-        Platform.icon.addEventListener("click", showTabOrganizer, true);
+        Platform.icon.on("click", showTabOrganizer, true);
 
-        Platform.tabs.addEventListener("remove", function (id) {
+        Platform.tabs.on("remove", function (id) {
             if (state.opened && state.opened.id === id) {
                 delete state.opened;
             }
@@ -390,20 +390,20 @@
                 visitedByURL.set(url, Date.now());
             }
 
-            Platform.tabs.addEventListener("focus", function (id) {
+            Platform.tabs.on("focus", function (id) {
                 Platform.tabs.get(id, function (tab) {
                     add(tab.url);
                 });
             }, true);
 
-            Platform.tabs.addEventListener("update", function (id, info, tab) {
+            Platform.tabs.on("update", function (id, info, tab) {
                 if (tab.status === "loading" && tab.selected) {
                     add(tab.url);
                 }
             }, true);
         }());
 
-        Platform.windows.addEventListener("focus", function (win) {
+        Platform.windows.on("focus", function (win) {
             if (win !== null) {
                 Platform.windows.get(win, function (win) {
                     if (win.type === "normal") {
@@ -413,7 +413,7 @@
             }
         }, true);
 
-        Platform.message.addEventListener("lib.keyboard", function (event) {
+        Platform.message.on("lib.keyboard", function (event) {
             if (event.type === "keyup") {
                 var ctrl = Options.get("popup.hotkey.ctrl");
                 var letter = String.fromCharCode(event.which);
@@ -430,7 +430,7 @@
             }
         }, true);
 
-        Platform.message.addEventListener("lib.action", function (json, port) {
+        Platform.message.on("lib.action", function (json, port) {
             switch (json.type) {
             case "focus":
                 Platform.tabs.focus(port.tab);
