Adds in a grid-based window view (Issue 121) Adds in the ability to sort windows by the number of tabs (Issue 123)

--- a/background.html
+++ b/background.html
@@ -42,6 +42,9 @@
 
             "windows.middle-close": false,
             "windows.type": "horizontal",
+            "windows.grid.columns": 3,
+            "windows.grid.rows": 1.5,
+            "windows.sort.type": "date-created",
 
             "counter.enabled": true,
             "counter.type": "total",
