--- a/themes/window-viewer.html
+++ b/themes/window-viewer.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <title>Theme Viewer</title>
 
-    <script src="/lib/Platform.js"></script>
+    <!--<script src="/lib/Platform.js"></script>-->
     <script src="/lib/Options.js"></script>
     <script src="/themes/color-sync.js"></script>
 
