--- a/lib/remove.html
+++ b/lib/remove.html
@@ -2,16 +2,22 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-    <title>`</title>
+    <title>-</title>
 
     <script src="Platform.js"></script>
     <script>
         "use strict";
         /*global Platform */
 
-        Platform.message.connect("lib.action", function (port) {
-            port.sendMessage({ type: "remove" });
+        Platform.tabs.getCurrent(function (tab) {
+            Platform.tabs.remove(tab);
         });
+//
+//        Platform.tabs.remove();
+//
+//        Platform.message.connect("lib.action", function (port) {
+//            port.sendMessage({ type: "remove" });
+//        });
     </script>
 </head>
 </html>
